--- a/ArtefactsManager.csproj
+++ b/ArtefactsManager.csproj
@@ -159,6 +159,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BusinessLogic\AccountService.cs" />
+    <Compile Include="BusinessLogic\AddEditService.cs" />
     <Compile Include="BusinessLogic\AddUserService.cs" />
     <Compile Include="BusinessLogic\ArtefactTypeService.cs" />
     <Compile Include="BusinessLogic\CatalogService.cs" />
@@ -173,12 +174,15 @@
     <Compile Include="BusinessLogic\DAO\IArtefactTypeDAO.cs" />
     <Compile Include="BusinessLogic\DAO\IAttributeDAO.cs" />
     <Compile Include="BusinessLogic\DAO\ICategoryDAO.cs" />
+    <Compile Include="BusinessLogic\DAO\IPermissionDAO.cs" />
     <Compile Include="BusinessLogic\DAO\IUserDao.cs" />
     <Compile Include="BusinessLogic\DAO\IRoleDAO.cs" />
+    <Compile Include="BusinessLogic\DAO\PermissionDAO.cs" />
     <Compile Include="BusinessLogic\DAO\RoleDAO.cs" />
     <Compile Include="BusinessLogic\DAO\UserDAO.cs" />
     <Compile Include="BusinessLogic\EditUserService.cs" />
     <Compile Include="BusinessLogic\ElementService.cs" />
+    <Compile Include="BusinessLogic\RolesManagementService.cs" />
     <Compile Include="BusinessLogic\UsersManagementService.cs" />
     <Compile Include="Data\ArtefactsManagerDatabaseContext.cs" />
     <Compile Include="Data\Models\Artefact.cs" />
@@ -188,6 +192,8 @@
     <Compile Include="Data\Models\AttributeArtefactType.cs" />
     <Compile Include="Data\Models\Category.cs" />
     <Compile Include="BusinessLogic\EditService.cs" />
+    <Compile Include="Data\Models\Permission.cs" />
+    <Compile Include="Data\Models\RolePermission.cs" />
     <Compile Include="Migrations\20220513085641_newDatabase.cs" />
     <Compile Include="Migrations\20220513085641_newDatabase.designer.cs">
       <DependentUpon>20220513085641_newDatabase.cs</DependentUpon>
@@ -234,6 +240,14 @@
     <Compile Include="Migrations\20220516093704_change_user_role.designer.cs">
       <DependentUpon>20220516093704_change_user_role.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\20220517081931_add_permission_table.cs" />
+    <Compile Include="Migrations\20220517081931_add_permission_table.designer.cs">
+      <DependentUpon>20220517081931_add_permission_table.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\20220517082250_edit_permission_table.cs" />
+    <Compile Include="Migrations\20220517082250_edit_permission_table.designer.cs">
+      <DependentUpon>20220517082250_edit_permission_table.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\ArtefactsManagerDatabaseContextModelSnapshot.cs" />
     <Compile Include="BusinessLogic\Credentials.cs" />
     <Compile Include="Utils\Encryption.cs" />
@@ -249,6 +263,12 @@
     </Compile>
     <Compile Include="View\Add.Designer.cs">
       <DependentUpon>Add.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\AddEditRole.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\AddEditRole.Designer.cs">
+      <DependentUpon>AddEditRole.cs</DependentUpon>
     </Compile>
     <Compile Include="View\AddType.cs">
       <SubType>Form</SubType>
@@ -305,6 +325,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="View\Add.resx">
       <DependentUpon>Add.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\AddEditRole.resx">
+      <DependentUpon>AddEditRole.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\AddType.resx">
       <DependentUpon>AddType.cs</DependentUpon>
