add_connection_string_to_config_file

--- a/App.config
+++ b/App.config
@@ -59,4 +59,8 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+    <connectionStrings>
+		<add name="ArtefactsManagerDatabase"
+			 connectionString="Server=localhost;Database=Artefacts_Manager_Database;user=artefact_manager;password=artefact_manager" />
+	</connectionStrings>
 </configuration>
